dept1/proj2/app2/prd-app2-namespace/app2-report/service.yaml
---
# Source: proxy-chart/charts/application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-app2-report
  labels:
    app: release-name-app2-report
    app.kubernetes.io/name: app2-report
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    package-name: app2-report-binprd
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: app2-report
    app.kubernetes.io/instance: release-name
